// -----------------------------------------------------------------------
// phantom-lang
// https://github.com/notcl4y14/phantom-lang
// -----------------------------------------------------------------------

// 30/12/2023
- Initial release
- Created main.ts
- Created token.ts